# masters_project

./: LICENSE  Makefile  README.md  private.yaml  pyproject.toml  requirements.txt
docs/: mkdocs.yml
masters_project/: __init__.py  dataset.py  features.py  plots.py
notebooks/: 0.01-rd-initial-data-exploration-all-variables.ipynb  0.02-rd-initial-data-exploration-all-variables.ipynb  0.02-rd-validating-timezones-against-profile-region.ipynb  0.03-rd-candidate-selection-analysis.ipynb  1.01-rd-creating-profile-read-function.ipynb  1.01-rd-finding-peaks-in-cob.ipynb  1.01-rd-implementing-cob-analysis.ipynb  1.01-rd-validating-timezones-against-profile-region.ipynb  1.02-rd-finding-peaks-in-cob.ipynb  1.03-rd-implementing-cob-analysis.ipynb  1.04-rd-modelling-cob-peaks-timeseries.ipynb  1.04-rd-validating-timezones-against-profile-region.ipynb  1.05-rd-analysis-of-cob-peaks-overnight.ipynb  2.01-rd-candidate-selection-analysis.ipynb  2.01-rd-creating-feature-extraction-hmm.ipynb  2.01-rd-creating-feature-extraction-night-analyser.ipynb  2.01-rd-creating-feature-extraction.ipynb  2.01-rd-creating-night-period-feature-extraction.ipynb  2.01-rd-modelling-cob-peaks-timeseries.ipynb  2.02-rd-night-clustering-on-iob-cob-only.ipynb  2.03-rd-creating-night-period-feature-extraction.ipynb  2.03-rd-nonlinear-model-parameter-search.ipynb  2.03a-rd-night-clustering-on-iob-cob-only.ipynb  2.03b-rd-analysis-of-night-clusters.ipynb  2.03b2-rd-analysis-of-lagged-cob-iob.ipynb  2.03c-rd-analysis-of-night-cluster-bg-excursions.ipynb  2.03c-rd-analysis-of-night-cluster-bg.ipynb  (+17 more)
(+49 files in other folders)
